<resources>
    <string name="app_name">EU-IV-FORUM-APP</string>
    <string name="email_hint">Your Email</string>
    <string name="pass_hint">Your Password</string>
    <string name="login_btn_txt">Logın to Your Account</string>
    <string name="login_rec_btn_txt">Need a new account?</string>
    <string name="welcome_txt">WELCOME TO</string>
    <string name="welcome_txt2">EUROPA UNIVERSALIS FORUM</string>
    <string name="reg_text1">Create a new Account</string>
    <string name="regPassConf">Confirm Password</string>
    <string name="regPass">Password</string>
    <string name="regBtnTxt">Create new Account</string>
    <string name="regBtnTxt2">Already have an account?</string>
    <string name="profileImage">Profile Image</string>
    <string name="setupName"><![CDATA[Your Name ->]]></string>
    <string name="setupSettingsBtn">Setup account settıngs</string>
    <string name="menu_forum_btn">Forums</string>
    <string name="menu_stats_btn">PROVINCES</string>
    <string name="menu_account_btn">ACCOUNT</string>
    <string name="bottomMenu_forum">Forums</string>
    <string name="bottomMenu_stats">Stats</string>
    <string name="bottomMenu_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_paradox">Paradox Icon</string>
    <string name="topic_create_title">Topic Title</string>
    <string name="topic_create_content">Topic Content</string>
    <string name="topic_create_btn">CREATE NEW TOPIC</string>
    <string name="topic_title_text">Title</string>
    <string name="topic_owner_text">Owner</string>
    <string name="topic_created_text">CreatedText</string>
    <string name="topic_content_txt">Topic Content</string>
    <string name="topic_reply_hint">Your Reply</string>
    <string name="topic_reply_send_img">Reply Send Button</string>
    <string name="logout_btn">LOG OUT</string>
    <string name="edit_profile_btn">EDIT PROFILE</string>
    <string name="profile_forum_title">MY TOPICS</string>
    <string name="txt_pro_owner">Owner:</string>
    <string name="txt_pro_continent">Continent:</string>
    <string name="txt_pro_region">Region:</string>
    <string name="txt_pro_culture">Culture:</string>
    <string name="txt_pro_area">Area:</string>
    <string name="txt_pro_culGroup">Culture Group:</string>
    <string name="txt_pro_religion">Religion:</string>
    <string name="txt_pro_tradeGood">Trade Good:</string>
    <string name="txt_pro_tradeNode">Trade Node:</string>
</resources>
