<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Forum.ForumTopicCreate">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainBottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbarSize="10dp"
        app:itemIconSize="26dp"
        app:itemIconTint="@color/colorPrimaryFont"
        app:itemTextColor="@color/colorPrimaryFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

    <EditText
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimaryFont"
        android:ems="10"
        android:hint="@string/topic_create_title"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="#DDD"
        android:textColorHighlight="#DDD"
        android:textColorHint="#999"
        android:textColorLink="#DDD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/topic_create_content"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textColor="#DDD"
        android:textColorHighlight="#DDD"
        android:textColorHint="#999"
        android:textColorLink="#DDD"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_topic_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <Button
        android:id="@+id/btn_topic_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/topic_create_btn"
        android:textColor="@color/colorPrimaryFont"
        android:textColorHighlight="@color/colorPrimaryFont"
        android:textColorHint="@color/colorPrimaryFont"
        android:textColorLink="@color/colorPrimaryFont"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/mainBottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>